@@ -14,6 +14,7 @@
  - Fix for bug 22928: Fixed activator of bundle 'com.openexchange.user.copy'
  - Fix for bug 22870: Checking for possibly empty mail identifier on action=get_structure request
  - Fix for bug 22927: Fixed CleanUpActivator of bundle 'com.openexchange.subscribe'
+ - Fix for bug 22926: Fixed activator of bundle 'com.openexchange.mobile.configuration.json'
 
 * 2012-09-04 - thorben.betten@open-xchange.com
 
